tests/reference/asr-test_set1-11379c7.stderr
semantic error: Found type mismatch in 'add' ('str' and 'int').
 --> tests/errors/test_set1.py:6:5
  |
6 |     a.add('err')
  |     ^^^^^^^^^^^^ 
